--- a/config/database.yml
+++ b/config/database.yml
@@ -5,9 +5,11 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
@@ -23,3 +25,4 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+  url: <%= ENV['DATABASE_URL'] %>
